// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Link component renders a variety of strings correctly empty string 1`] = `
<DocumentFragment>
  <span
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href=""
    role="link"
    tabindex="0"
  >
    <span
      class="Link-module_IFszra_text"
    >
      Empty string
    </span>
    <svg
      alt=""
      aria-hidden="true"
      aria-labelledby="react-aria-:r0:"
      class="Icon-module_yNB47q_icon Link-module_IFszra_external"
      fill="none"
      height="12"
      role="presentation"
      slot="icon"
      viewBox="0 0 16 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.823 2.45a.28.28 0 0 0-.272-.273l-4.045-.079a.277.277 0 0 0-.201.474l1.08 1.08-2.45 2.452a1.4 1.4 0 0 0-.148.174L5.999 8.065a1.369 1.369 0 1 0 1.936 1.936l1.787-1.788q.092-.065.174-.147l2.451-2.452 1.081 1.081a.277.277 0 0 0 .474-.201z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.129a.75.75 0 0 1 0 1.5H4a.5.5 0 0 0-.5.5v6.864a.5.5 0 0 0 .5.5h6.864a.5.5 0 0 0 .5-.5V8.75a.75.75 0 0 1 1.5 0v3.243a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5.129a2 2 0 0 1 2-2z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external MDB docs URL 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="https://www.mongodb.com/docs/atlas/"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      MongoDB Atlas Docs
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external MDB non-docs URL 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="https://account.mongodb.com/account/"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      MongoDB Atlas Registration Page
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external URL 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="http://mongodb.com"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      MongoDB Company
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external URL with hidden external icon 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="http://mongodb.com"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      MongoDB Company
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external non-MDB docs URL 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="https://safety.google/authentication/"
    rel="noopener noreferrer"
    tabindex="0"
    target="_blank"
  >
    <span
      class="Link-module_IFszra_text"
    >
      Google 2-Step Verification
    </span>
    <svg
      alt=""
      aria-hidden="true"
      aria-labelledby="react-aria-:r1:"
      class="Icon-module_yNB47q_icon Link-module_IFszra_external"
      fill="none"
      height="12"
      role="presentation"
      slot="icon"
      viewBox="0 0 16 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.823 2.45a.28.28 0 0 0-.272-.273l-4.045-.079a.277.277 0 0 0-.201.474l1.08 1.08-2.45 2.452a1.4 1.4 0 0 0-.148.174L5.999 8.065a1.369 1.369 0 1 0 1.936 1.936l1.787-1.788q.092-.065.174-.147l2.451-2.452 1.081 1.081a.277.277 0 0 0 .474-.201z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.129a.75.75 0 0 1 0 1.5H4a.5.5 0 0 0-.5.5v6.864a.5.5 0 0 0 .5.5h6.864a.5.5 0 0 0 .5-.5V8.75a.75.75 0 0 1 1.5 0v3.243a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5.129a2 2 0 0 1 2-2z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly identfies mailto links as external urls 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="mailto:docs@mongodb.com"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      docs@mongodb.com
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link 1`] = `
<DocumentFragment>
  <a
    class="link test-class"
    href="/drivers/c/"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link query param 1`] = `
<DocumentFragment>
  <a
    class="link test-class"
    href="/drivers/ruby/?site=drivers"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link that already includes trailing slash 1`] = `
<DocumentFragment>
  <a
    class="link test-class"
    href="/drivers/nodejs/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link with hash 1`] = `
<DocumentFragment>
  <a
    class="link test-class"
    href="/drivers/pymongo/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly sidenav symlink to another docs property 1`] = `
<DocumentFragment>
  <a
    class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
    data-rac=""
    data-react-aria-pressable="true"
    data-viaid="via-link"
    href="https://www.mongodb.com/docs/atlas/"
    tabindex="0"
    target="_self"
  >
    <span
      class="Link-module_IFszra_text"
    >
      Atlas
    </span>
    <svg
      alt=""
      aria-hidden="true"
      aria-labelledby="react-aria-:r2:"
      class="Icon-module_yNB47q_icon Link-module_IFszra_external"
      fill="none"
      height="12"
      role="presentation"
      slot="icon"
      viewBox="0 0 16 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.823 2.45a.28.28 0 0 0-.272-.273l-4.045-.079a.277.277 0 0 0-.201.474l1.08 1.08-2.45 2.452a1.4 1.4 0 0 0-.148.174L5.999 8.065a1.369 1.369 0 1 0 1.936 1.936l1.787-1.788q.092-.065.174-.147l2.451-2.452 1.081 1.081a.277.277 0 0 0 .474-.201z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.129a.75.75 0 0 1 0 1.5H4a.5.5 0 0 0-.5.5v6.864a.5.5 0 0 0 .5.5h6.864a.5.5 0 0 0 .5-.5V8.75a.75.75 0 0 1 1.5 0v3.243a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5.129a2 2 0 0 1 2-2z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;
